i hope i can change this later
hopefully

--- a/Main/index.html
+++ b/Main/index.html
@@ -8,7 +8,7 @@
                 <button formaction="./Name.html">War</button>
                 <button formaction="./Name.html">Go Fish</button>
                 <button formaction="./Name.html">BS</button>
-                <button formaction="./Name.html">Garbage</button>
+                <button formaction="./Garbage/garbage.html">Garbage</button>
                 <button formaction="./Name.html">52 Pickup</button>
             </form>
         </div>
