updated garbage and cardfunc
~changed the suits in the card generator to make getting card files easier
~changed setHand to show images instead of text
~updated cards to include all card and backs and removed redundant cards.
+added a function to get images to garbage

--- a/Main/Garbage/garbage.html
+++ b/Main/Garbage/garbage.html
@@ -8,6 +8,7 @@
         <title>Garbage</title>
     </header>
     <body>
+        
         <h1>player 1</h1>
         <div id="player1-field" class="player-field">
             <div id="card-0" class="card"></div>
@@ -22,9 +23,12 @@
             <div id="card-9" class="card"></div>
         </div>
 
+        <h1>Deck</h1>
         <div id="deck">
-            <img src="../images/card base.png" alt="deck" onclick="setHand()" class="card">
+            <img src="../images/E-Back.png" alt="deck" onclick="setHand()" class="card">
         </div>
+
+        <h1>Hand</h1>
         <div id="hand">
             <div id="player-hand" class="card"></div>
         </div>
