--- a/Main/Garbage/garbage.html
+++ b/Main/Garbage/garbage.html
@@ -1,50 +1,59 @@
 <html>
     <head>
         <script src="../cardFuncs.js"></script>
-        <script src="./garbage.js"></script>
-        <link rel="stylesheet" href="./garbage.css">
+        <script src="garbage.js"></script>
+        <link rel="stylesheet" href="garbage.css">
     </head>
     <header>
         <title>Garbage</title>
     </header>
     <body>
         
-        <h1>player 1</h1>
-        <div id="player1-field" class="player-field">
-            <div id="card-0" class="card"></div>
-            <div id="card-1" class="card"></div>
-            <div id="card-2" class="card"></div>
-            <div id="card-3" class="card"></div>
-            <div id="card-4" class="card"></div>
-            <div id="card-5" class="card"></div>
-            <div id="card-6" class="card"></div>
-            <div id="card-7" class="card"></div>
-            <div id="card-8" class="card"></div>
-            <div id="card-9" class="card"></div>
-        </div>
-
-        <h1>Deck</h1>
         <div id="deck">
-            <img src="../images/E-Back.png" alt="deck" onclick="setHand()" class="card">
+            <h1>Deck</h1>
+            <div class="deck-col">
+                <img src="../images/E-Back.png" alt="deck" onclick="setHand()" class="card">
+            </div>
+            <h1>Hand</h1>
+            <div class="deck-col">
+                <div id="player-hand" class="card"></div>
+            </div>
         </div>
 
-        <h1>Hand</h1>
-        <div id="hand">
-            <div id="player-hand" class="card"></div>
+        <button onclick="nextTurn()">Next Turn</button>
+
+        <h1 class="player1">player 1</h1>
+        <div id="player1-field" class="player-field player1">
+            <div id="card-0" class="field-box" onclick="flipCard(this)"><h2>1</h2></div>
+            <div id="card-1" class="field-box" onclick="flipCard(this)"><h2>2</h2></div>
+            <div id="card-2" class="field-box" onclick="flipCard(this)"><h2>3</h2></div>
+            <div id="card-3" class="field-box" onclick="flipCard(this)"><h2>4</h2></div>
+            <div id="card-4" class="field-box" onclick="flipCard(this)"><h2>5</h2></div>
+            <div id="card-5" class="field-box" onclick="flipCard(this)"><h2>6</h2></div>
+            <div id="card-6" class="field-box" onclick="flipCard(this)"><h2>7</h2></div>
+            <div id="card-7" class="field-box" onclick="flipCard(this)"><h2>8</h2></div>
+            <div id="card-8" class="field-box" onclick="flipCard(this)"><h2>9</h2></div>
+            <div id="card-9" class="field-box" onclick="flipCard(this)"><h2>10</h2></div>
         </div>
 
-        <h1>player 2</h1>
-        <div id="player2-field" class="player-field">
-            <div id="card-10" class="card"></div>
-            <div id="card-11" class="card"></div>
-            <div id="card-12" class="card"></div>
-            <div id="card-13" class="card"></div>
-            <div id="card-14" class="card"></div>
-            <div id="card-15" class="card"></div>
-            <div id="card-16" class="card"></div>
-            <div id="card-17" class="card"></div>
-            <div id="card-18" class="card"></div>
-            <div id="card-19" class="card"></div>
+        <h1 class="player2">player 2</h1>
+        <div id="player2-field" class="player-field player2">
+            <div id="card-10" class="field-box" onclick="flipCard(this)"><h2>1</h2></div>
+            <div id="card-11" class="field-box" onclick="flipCard(this)"><h2>2</h2></div>
+            <div id="card-12" class="field-box" onclick="flipCard(this)"><h2>3</h2></div>
+            <div id="card-13" class="field-box" onclick="flipCard(this)"><h2>4</h2></div>
+            <div id="card-14" class="field-box" onclick="flipCard(this)"><h2>5</h2></div>
+            <div id="card-15" class="field-box" onclick="flipCard(this)"><h2>6</h2></div>
+            <div id="card-16" class="field-box" onclick="flipCard(this)"><h2>7</h2></div>
+            <div id="card-17" class="field-box" onclick="flipCard(this)"><h2>8</h2></div>
+            <div id="card-18" class="field-box" onclick="flipCard(this)"><h2>9</h2></div>
+            <div id="card-19" class="field-box" onclick="flipCard(this)"><h2>10</h2></div>
         </div>
     </body>
 </html>
+
+<div>
+    <div class="col"></div>
+    <div class="col"></div>
+    <div class="col"></div>
+</div>
