--- a/Main/War/war.html
+++ b/Main/War/war.html
@@ -32,6 +32,8 @@
                 <div class="middleButtons">
                 <button id="dealButton" onclick="getCards()">DEAL</button>
                 <br>
+                <button id="warButton" onclick="war(playerHand, computerHand)">WAR</button>
+                <br>
                 <button class="newGameButton" onclick="split()">NEW GAME</button>
                 </div>
 
