--- a/Main/index.html
+++ b/Main/index.html
@@ -4,12 +4,12 @@
     <body>
         <div>
             <form>
-                <button formaction="./Name.html">21</button>
-                <button formaction="./Name.html">War</button>
-                <button formaction="./Name.html">Go Fish</button>
+                <button formaction="../Main/TwentyOne/HTML/start.html">21</button>
+                <button formaction="../Main/War/war.html">War</button>
+                <button formaction="./gofish.html">Go Fish</button>
                 <button formaction="./Name.html">BS</button>
                 <button formaction="./Garbage/garbage.html">Garbage</button>
-                <button formaction="./Name.html">52 Pickup</button>
+                <button formaction="./pickup.html">52 Pickup</button>
             </form>
         </div>
     </body>
