--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <body>
         <div>
             <form>
-                <button formaction="../Main/TwentyOne/HTML/start.html">21</button>
-                <button formaction="../Main/War/war.html">War</button>
+                <button formaction="./Main/TwentyOne/HTML/start.html">21</button>
+                <button formaction="./Main/War/war.html">War</button>
                 <button formaction="./gofish.html">Go Fish</button>
-                <button formaction="./Name.html">BS</button>
+                <button formaction="./BS/BS.html">BS</button>
                 <button formaction="./Garbage/garbage.html">Garbage</button>
                 <button formaction="./pickup.html">52 Pickup</button>
             </form>
