--- a/Main/index.html
+++ b/Main/index.html
@@ -8,7 +8,7 @@
                 <button formaction="../Main/War/war.html">War</button>
                 <button formaction="./gofish.html">Go Fish</button>
                 <button formaction="./Name.html">BS</button>
-                <button formaction="./Garbage/garbage.html">Garbage</button>
+                <button formaction="../Main/Garbage/garbage.html">Garbage</button>
                 <button formaction="./pickup.html">52 Pickup</button>
             </form>
         </div>
