--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
                 <button formaction="./Main/TwentyOne/HTML/start.html">21</button>
                 <button formaction="./Main/War/war.html">War</button>
                 <button formaction="./gofish.html">Go Fish</button>
-                <button formaction="./BS/BS.html">BS</button>
-                <button formaction="./Garbage/garbage.html">Garbage</button>
+                <button formaction="./Main/BS/BS.html">BS</button>
+                <button formaction="../Card-Game-Collection/Main/Garbage/garbage.html">Garbage</button>
                 <button formaction="./pickup.html">52 Pickup</button>
             </form>
         </div>
